super massive changes to the code!